[gd_scene load_steps=15 format=3 uid="uid://bvxm8hs5678"]

[ext_resource type="Script" path="res://scripts/game_init.gd" id="1_game_init"]
[ext_resource type="Script" path="res://scripts/player/player_controller.gd" id="1_player"]
[ext_resource type="Script" path="res://scripts/player/player_health.gd" id="2_health"]
[ext_resource type="Script" path="res://scripts/weapons/weapon_manager.gd" id="3_weapon_mgr"]
[ext_resource type="Script" path="res://scripts/weapons/weapon_base.gd" id="4_weapon"]
[ext_resource type="Resource" uid="uid://pistol_data" path="res://resources/weapon_data/pistol_data.tres" id="5_pistol"]
[ext_resource type="Script" path="res://scripts/enemies/enemy_spawner.gd" id="6_spawner"]
[ext_resource type="Script" path="res://scripts/systems/wave_manager.gd" id="7_wave"]
[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="8_hud"]
[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="9_pause"]
[ext_resource type="Script" path="res://scripts/ui/wave_complete.gd" id="10_wave_complete"]
[ext_resource type="Script" path="res://scripts/ui/game_over.gd" id="11_gameover"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
radius = 0.5
height = 2.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.5
height = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(0.2, 0.1, 0.5)

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.2, 0.3, 0.4, 1)
ambient_light_source = 2
ambient_light_color = Color(0.4, 0.4, 0.5, 1)
ambient_light_energy = 0.5

[node name="Game" type="Node3D"]
script = ExtResource("1_game_init")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 10, 0)
shadow_enabled = true

[node name="Arena" type="Node3D" parent="."]

[node name="Floor" type="CSGBox3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
size = Vector3(30, 1, 30)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Arena"]

[node name="NavMeshFloor" type="CSGBox3D" parent="Arena/NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
size = Vector3(28, 0.1, 28)

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_player")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CapsuleMesh_1")

[node name="PlayerHealth" type="Node" parent="Player"]
script = ExtResource("2_health")

[node name="WeaponAttachment" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 1.5, 0.5)

[node name="WeaponManager" type="Node" parent="Player/WeaponAttachment"]
script = ExtResource("3_weapon_mgr")

[node name="Weapon1" type="Node3D" parent="Player/WeaponAttachment/WeaponManager"]
script = ExtResource("4_weapon")
weapon_data = ExtResource("5_pistol")

[node name="MuzzlePoint" type="Marker3D" parent="Player/WeaponAttachment/WeaponManager/Weapon1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="PlaceholderMesh" type="MeshInstance3D" parent="Player/WeaponAttachment/WeaponManager/Weapon1"]
mesh = SubResource("BoxMesh_1")

[node name="EnemySpawner" type="Node3D" parent="."]
script = ExtResource("6_spawner")

[node name="SpawnPoint1" type="Marker3D" parent="EnemySpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 0)

[node name="SpawnPoint2" type="Marker3D" parent="EnemySpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0)

[node name="SpawnPoint3" type="Marker3D" parent="EnemySpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 12)

[node name="SpawnPoint4" type="Marker3D" parent="EnemySpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12)

[node name="SpawnPoint5" type="Marker3D" parent="EnemySpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 8)

[node name="SpawnPoint6" type="Marker3D" parent="EnemySpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -8)

[node name="SpawnPoint7" type="Marker3D" parent="EnemySpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -8)

[node name="SpawnPoint8" type="Marker3D" parent="EnemySpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 8)

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("7_wave")
enemy_spawner = NodePath("../EnemySpawner")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_hud")

[node name="PauseMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_pause")

[node name="WaveComplete" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_wave_complete")

[node name="GameOver" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_gameover")
